@@ -1,3 +1,8 @@
+2016-06-12 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added News - sdcc 3.6.0 release
+	* previous.php: moved 3.5.0 release items
+
 2016-06-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added News - sdcc 3.6.0 RC2
